--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
+    "create-react-app-sass": "^1.1.0",
     "cross-spawn": "4.0.2",
     "css-loader": "^0.26.1",
     "detect-port": "1.0.1",
@@ -50,7 +51,9 @@
   },
   "dependencies": {
     "es6-promise": "^4.0.5",
+    "express": "^4.14.1",
     "isomorphic-fetch": "^2.2.1",
+    "morgan": "^1.8.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
@@ -62,6 +65,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "build-sass": "react-scripts-with-sass build",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
