--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.16.0",
     "es6-promise": "^4.0.5",
     "express": "^4.14.1",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.8.0",
+    "nconf": "^0.8.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
