--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
+    "cors": "^2.8.1",
     "create-react-app-sass": "^1.1.0",
     "cross-spawn": "4.0.2",
     "css-loader": "^0.26.1",
