--- a/package.json
+++ b/package.json
@@ -13,7 +13,19 @@
         "react-scripts": "1.0.17",
         "redux": "^3.7.2",
         "redux-devtools-extension": "^2.13.2",
-        "redux-thunk": "^2.2.0"
+        "redux-thunk": "^2.2.0",
+        "babel": "^6.23.0",
+        "babel-cli": "^6.26.0",
+        "body-parser": "^1.18.2",
+        "compression": "^1.7.1",
+        "express": "^4.16.2",
+        "mongodb": "^3.0.0",
+        "morgan": "^1.9.0"
+    },
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
+        "nodemon": "^1.14.3"
     },
     "scripts": {
         "start": "react-scripts start",
