--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-    "name": "simple-blog",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "classnames": "^2.2.5",
-        "prop-types": "^15.6.0",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "react-icons": "^2.2.7",
-        "react-redux": "^5.0.6",
-        "react-router-dom": "^4.2.2",
-        "react-scripts": "1.0.17",
-        "redux": "^3.7.2",
-        "redux-devtools-extension": "^2.13.2",
-        "redux-thunk": "^2.2.0",
-        "babel": "^6.23.0",
-        "babel-cli": "^6.26.0",
-        "body-parser": "^1.18.2",
-        "compression": "^1.7.1",
-        "express": "^4.16.2",
-        "mongodb": "^3.0.0",
-        "morgan": "^1.9.0"
-    },
-    "devDependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-preset-es2015": "^6.24.1",
-        "nodemon": "^1.14.3"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
-    },
-    "proxy": "http://localhost:8081"
+  "name": "simple-blog",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "body-parser": "^1.18.2",
+    "classnames": "^2.2.5",
+    "compression": "^1.7.1",
+    "express": "^4.16.2",
+    "immutable": "^3.8.2",
+    "mongodb": "^3.0.0",
+    "morgan": "^1.9.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-immutable": "^4.0.0",
+    "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "nodemon": "^1.14.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "proxy": "http://localhost:8081"
 }
