--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-immutable": "^4.0.0",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
